Fixed HTML formatting and hopefully index on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -375,6 +375,7 @@
 
     }   
     .rectangle .square {
+        position: relative;
         width: 100%;
         height: 33%;
         text-align: center;
@@ -388,7 +389,7 @@
         justify-content: center;
         color: #ffffd1;
         text-decoration: none;
-        font-size: 1.5em;
+        font-size: 1.4em;
         font-weight: bold;
     }
     .right a#c2 {
